--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.0",
   "private": true,
   "author": "Jose Hernandez",
+  "homepage": "https://joseangelhernandez.github.io/minume-confirn",
   "description": "-",
   "repository": {
     "type": "git",
@@ -16,15 +17,17 @@
     "@asseinfo/react-kanban": "2.1.0",
     "@emotion/cache": "11.4.0",
     "@emotion/react": "11.4.1",
-    "@emotion/styled": "11.3.0",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@fullcalendar/daygrid": "5.9.0",
     "@fullcalendar/interaction": "5.9.0",
     "@fullcalendar/react": "5.9.0",
     "@fullcalendar/timegrid": "5.9.0",
     "@iconscout/unicons": "^4.0.1",
+    "@material-table/core": "^0.2.54",
+    "@material-ui/core": "^4.11.4",
     "@mui/icons-material": "^5.1.1",
-    "@mui/material": "5.4.2",
+    "@mui/material": "^5.4.3",
     "@mui/styled-engine": "^5.1.1",
     "@pathofdev/react-tag-input": "1.0.7",
     "@react-leaflet/core": "1.0.2",
@@ -43,7 +46,11 @@
     "file-saver": "^2.0.5",
     "flatpickr": "4.6.9",
     "formik": "2.2.9",
+    "gh-pages": "^4.0.0",
     "leaflet": "1.7.1",
+    "material-table": "^1.69.3",
+    "mdb-react-table-editor": "git+https://oauth2:5udkzRnb7f7CFzuWQh3D@git.mdbootstrap.com/mdb/react/mdb5/plugins/prd/table-editor",
+    "mdb-react-ui-kit": "git+https://oauth2:5udkzRnb7f7CFzuWQh3D@git.mdbootstrap.com/mdb/react/mdb5/prd/mdb5-react-ui-kit-pro-advanced",
     "prettier": "^2.5.1",
     "prop-types": "15.7.2",
     "qrcode": "^1.5.1",
@@ -65,21 +72,25 @@
     "react-images-viewer": "1.6.7",
     "react-leaflet": "2.7.0",
     "react-quill": "1.3.5",
-    "react-router-dom": "5.2.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-select": "4.3.1",
     "react-table": "7.7.0",
     "react-table-hoc-fixed-columns": "^2.3.4",
     "react-tilt": "0.1.4",
+    "react-toastify": "^9.0.3",
     "stylis": "4.0.10",
     "sweetalert2": "11.1.2",
     "three": "^0.124.0",
+    "typescript": "^4.9.4",
     "universal-cookie": "^4.0.4",
     "uuid": "8.3.2",
     "web-vitals": "1.0.1",
     "yup": "0.32.9"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
