--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-table-hoc-fixed-columns": "^2.3.4",
     "react-tilt": "0.1.4",
     "react-toastify": "^9.0.3",
+    "socket.io-client": "^4.5.4",
     "stylis": "4.0.10",
     "sweetalert2": "11.1.2",
     "three": "^0.124.0",
