--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
     "@three-ts/orbit-controls": "1.4.7",
+    "@vercel/analytics": "^0.1.6",
     "axios": "^0.26.0",
     "bootstrap": "^5.2.3",
     "bootstrap-table-fixed-columns-pro": "^1.0.3",
@@ -84,6 +85,7 @@
     "three": "^0.124.0",
     "typescript": "^4.9.4",
     "universal-cookie": "^4.0.4",
+    "use-sound": "^4.0.1",
     "uuid": "8.3.2",
     "web-vitals": "1.0.1",
     "yup": "0.32.9"
